--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14991,7 +14991,7 @@ contents, unless you set the =UNNUMBERED= property to =notoc=:
   document and on a per-language basis.  The =LANGUAGE= option will be
   used to determine the main and secondary languages.  For example:
 
-  #+BEGIN_SRC org :noeval
+  #+BEGIN_SRC org :eval no
 ,#+LANGUAGE: fr de es
 ,#+LATEX_MULTI_LANG: polyglossia
   #+END_SRC
@@ -15006,7 +15006,7 @@ contents, unless you set the =UNNUMBERED= property to =notoc=:
   package you use.
 
   For =polyglossia=:
-  #+begin_src org :noeval
+  #+begin_src org :eval no
 
   @@latex:\textgerman{@@Dies ist ein Abschnitt auf Deutsch.@@latex:}@@
 
@@ -15016,7 +15016,7 @@ contents, unless you set the =UNNUMBERED= property to =notoc=:
   #+end_src
 
   For =babel=:
-  #+begin_src org :noeval
+  #+begin_src org :eval no
   @@latex:\foreignlanguage{french}{@@Ceci est un passage en français.@@latex:}@@
 
   ,#+ATTR_LATEX: :options {french}
@@ -15066,7 +15066,7 @@ For example, if you need the
 [[https://tug.org/FontCatalogue/erewhon/][Erewhon]] font, you will find
 the following configuration in the LaTeX font catalogue:
 
-#+BEGIN_SRC latex :noeval
+#+BEGIN_SRC latex :eval no
 \usepackage[proportional,scaled=1.064]{erewhon}
 \usepackage[erewhon,vvarbb,bigdelims]{newtxmath}
 \usepackage[T1]{fontenc}
@@ -15078,7 +15078,7 @@ By default, LaTeX export includes the ~fontenc~ package automatically
 include it in your header.  The rest of the configuration needs to be
 included manually as:
 
-#+BEGIN_SRC org :noeval
+#+BEGIN_SRC org :eval no
 ,#+LATEX_HEADER: \usepackage[proportional,scaled=1.064]{erewhon}
 ,#+LATEX_HEADER: \usepackage[erewhon,vvarbb,bigdelims]{newtxmath}
 ,#+LATEX_HEADER: \renewcommand*\oldstylenums[1]{\textosf{#1}}
@@ -15134,7 +15134,7 @@ For example, if you want to map the ~math~ font to the system font
 ~:font~. Consider the following definition for
 ~org-latex-fontspec-config~:
 
-#+BEGIN_SRC elisp :noeval
+#+BEGIN_SRC elisp :eval no
 (setq-default org-latex-fontspec-config
               '(("main" :font "FreeSerif")
                 ("sans" :font "FreeSans")
@@ -15188,7 +15188,7 @@ scaled, you could specify it as:
 When you have more than one feature to add, you can also provide them
 as a comma-separated list. The following code also would also define
 
-#+BEGIN_SRC emacs-lisp :noeval
+#+BEGIN_SRC emacs-lisp :eval no
 ("mono" :font "TeX Gyre Cursor"
         :features "Color=blue,Scale=MatchLowercase")
 #+END_SRC
@@ -15210,7 +15210,7 @@ fallback configuration.
 For example, assume your ~init.el~ configures the =main= font in
 ~org-latex-fontspec-config~ as:
 
-#+BEGIN_SRC emacs-lisp :noeval
+#+BEGIN_SRC emacs-lisp :eval no
 (setq-default org-latex-fontspec-config
               '(("main"
                  :font "TeX Gyre Termes"
@@ -15263,7 +15263,7 @@ packages.  These packages provide the ~\setCKJmainfont{}~,
 ~CJKsans~ and ~CJK mono~ to specify the fonts supporting the Chinese,
 Japanese or Korean scripts you need for your documents.  For example:
 
-#+BEGIN_SRC elisp :noeval
+#+BEGIN_SRC elisp :eval no
 ((org-mode .
   ((org-latex-fontspec-config .
     (("main" :font "Noto Serif")
@@ -15281,7 +15281,7 @@ Additionally, you can define common features for all fonts using the
 common features for all fonts, you can define them as an associative
 list of strings (FEATURE . VALUE) in this variable. For example:
 
-#+BEGIN_SRC elisp :noeval
+#+BEGIN_SRC elisp :eval no
 (setq org-latex-fontspec-default-features
       '(("Numbers". "OldStyle")))
 #+END_SRC
@@ -15289,7 +15289,7 @@ list of strings (FEATURE . VALUE) in this variable. For example:
 or its equivalent as a file or directory local variable will generate
 the following LaTeX code in the file header:
 
-#+BEGIN_SRC latex :noeval
+#+BEGIN_SRC latex :eval no
 \defaultfontfeatures{
   Numbers=OldStyle
 }
@@ -15316,10 +15316,10 @@ generated.
 When non-~nil~, ~org-latex-polyglossia-font-config~ contains a list of
 definitions for the different fonts you need in your PDF output.  Each
 definition is a property list (~plist~). The following is show an example
-of the definition of the font configuration to use =polyglossia= in a
-document with English and Hebrew text placed in a =.dir-locals.el= file:
+of the definition of the font configuration to use ~polyglossia~ in a
+document with English and Hebrew text placed in a ~.dir-locals.el~ file:
 
-#+BEGIN_SRC emacs-lisp :noeval
+#+BEGIN_SRC emacs-lisp :eval no
 ((org-mode
   . ((org-latex-polyglossia-font-config
       . (("en"
@@ -15342,7 +15342,7 @@ basis. For example, the document will use using the =Miriam Mono CLM=
 script for Hebrew script in mono-spaced passages (=:variant
 "tt"=). You will see the following in the exported LaTeX:
 
-#+BEGIN_SRC LaTeX :noeval
+#+BEGIN_SRC LaTeX :eval no
   \newfontfamily{\hebrewfonttt}[Script=Hebrew]{Miriam Mono CLM}
 #+END_SRC
 
@@ -15371,7 +15371,7 @@ the document's main language with the configuration for
 =fontspec=. For example, the following settings in you
 directory-local variables:
 
-#+BEGIN_SRC emacs-lisp :noeval
+#+BEGIN_SRC emacs-lisp :eval no
 ((org-mode
   . ((org-latex-fontspec-default-features
       . (("Ligatures" . "TeX")))
@@ -15435,7 +15435,7 @@ For example, for a document with text in German and Greek,
 where the main language is German, this variable could be
 initialised as follows:
 
-#+BEGIN_SRC elisp :noeval
+#+BEGIN_SRC elisp :eval no
 (setq org-latex-babel-font-config
       '(("el-polyton"
          :fonts (("rm" :font "Noto Serif")))
@@ -15448,7 +15448,7 @@ initialised as follows:
 This setting will produce the following code in the LaTeX export
 header:
 
-#+BEGIN_SRC latex :noeval
+#+BEGIN_SRC latex :eval no
 \babelfont{rm}{CMU Serif}
 \babelfont{tt}{DejaVu Sans Mono}[Scale=MatchLowercase]
 \babelfont[polytonicgreek]{rm}{Noto Serif}
@@ -15474,7 +15474,7 @@ per language listed in =#+LANGUAGE=. For example, if you can detect
 the language a passage is written by the characters, you can use the
 babel option =onchar=ids fonts=:
 
-#+BEGIN_SRC emacs-lisp :noeval
+#+BEGIN_SRC emacs-lisp :eval no
 (setq org-latex-babel-font-config
       '((nil
          :fonts (("rm" :font "FreeSerif")))
@@ -15485,7 +15485,7 @@ babel option =onchar=ids fonts=:
 #+texinfo: @noindent
 When applied to an Org file with the following settings in the header
 
-#+BEGIN_SRC org :noeval
+#+BEGIN_SRC org :eval no
 ,#+LATEX_COMPILER: lualatex
 ,#+LANGUAGE: el pt
 ,#+LATEX_MULTI_LANG: babel
@@ -15493,7 +15493,7 @@ When applied to an Org file with the following settings in the header
 #+texinfo: @noindent
 it will generate the following LaTeX preamble code:
 
-#+BEGIN_SRC latex :noeval
+#+BEGIN_SRC latex :eval no
 \usepackage[bidi=basic]{babel}
 \babelprovide[import,main]{greek}
 \babelprovide[onchar=ids fonts]{portuguese}
